crates/sui-display/src/v2/snapshots/sui_display__v2__parser__tests__address_literal_whitespace.snap
---
source: crates/sui-display/src/v2/parser.rs
expression: "strands(r#\"{@ 0x3}\"#)"
---
Error: Unexpected whitespace at offset 2, expected one of a decimal number, or a hexadecimal number
